# finance-ai-assistant

./: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: config.py  logging_config.py  main.py  observability.py
app/agent/: cache.py  checkpoint.py  context.py  embeddings.py  graph.py  llm.py  nodes.py  prompts.py  runner.py  state.py
app/agent/skills/: __init__.py  base.py  finance_calc.py  knowledge_base.py  transactions.py
app/agent/tools/: __init__.py  knowledge.py  transactions.py
app/api/: routes.py  schemas.py
app/db/: base.py  session.py
app/db/managers/: base.py  cache_manager.py  knowledge_manager.py  transaction_manager.py  vector.py
app/db/models/: __init__.py  cache.py  finance.py  knowledge.py
app/rag/: store.py
app/schemas/: cache.py  finance.py  knowledge.py
client/: __main__.py
data/kb/: juros-compostos.md  orcamento-50-30-20.md  reserva-de-emergencia.md  tributacao-investimentos.md
docs/: architecture.md  configuration.md  extending.md  usage.md
scripts/: seed.py
tests/: conftest.py  test_integration.py  test_lint.py  test_routes.py
tests/benchmark/: test_benchmarks.py
tests/unit/: test_base_manager.py  test_context.py  test_graph.py  test_observability.py  test_performance.py  test_persist.py  test_runner.py  test_runner_e2e.py  test_security.py  test_skills.py  test_transaction_queries.py  test_transaction_tools.py  test_vector_manager.py
